# sub-manager

./: .gitignore  README.md  main.py  pyproject.toml  sub-manager-onefile.spec  sub-manager.spec
.github/workflows/: build-windows.yml  release-windows.yml
installer/windows/: sub-manager.iss  sub-manager.wxs
qml/: FfmpegSettingsWindow.qml  Main.qml
scripts/: build_windows.bat  build_windows.ps1  generate_wix_fragment.py  prepare_embedded_python.py  reset_debug_state.sh
sub_manager/: __init__.py  app.py  backend.py  constants.py  error_utils.py  models.py  paths.py  process_utils.py  state_types.py
sub_manager/services/: __init__.py  dependency_service.py  subtitle_service.py
sub_manager/ui/: __init__.py  windows.py
sub_manager/workers/: __init__.py  download_workers.py  ocr_worker.py
tests/: test_error_utils.py
tests/backend/: test_dependencies.py
